--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-calendars": "^1.1291.0",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
